Fixed issue by adding button

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Här kan vi leka med en stack</h1>
         Stacken: <span id="top_of_stack">n/a</span><br>
+        <button type="button" name="peek" id="peek">Vad finns överst på stacken?</button>
         <button type="button" name="pop" id="pop">Poppa stacken!</button>
         <button type="button" name="push" id="push">Pusha till stacken</button>
     </body>
